--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "author": "Igor Kuzmenko <igor@kuzzmi.com>",
     "license": "MIT",
     "scripts": {
-        "start:server": "nodemon server/index.js"
+        "start:server": "nodemon server/index.js",
+        "start:client": "webpack-dev-server"
     },
     "dependencies": {
         "babel-core": "^6.26.0",
@@ -22,6 +23,8 @@
         "passport-local": "^1.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-router": "^4.1.2",
+        "react-router-dom": "^4.1.2",
         "sass-loader": "^6.0.6",
         "semantic-ui-react": "^0.71.4",
         "style-loader": "^0.18.2",
