--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
         "babel-loader": "^7.1.2",
         "babel-preset-react": "^6.24.1",
         "body-parser": "^1.17.2",
+        "css-loader": "^0.28.5",
+        "eslint": "^4.5.0",
+        "eslint-loader": "^1.9.0",
         "express": "^4.15.4",
+        "file-loader": "^0.11.2",
         "mongoose": "^4.11.7",
         "morgan": "^1.8.2",
         "node-trello": "^1.2.1",
@@ -26,8 +30,10 @@
         "react-router": "^4.1.2",
         "react-router-dom": "^4.1.2",
         "sass-loader": "^6.0.6",
+        "semantic-ui-css": "^2.2.12",
         "semantic-ui-react": "^0.71.4",
         "style-loader": "^0.18.2",
+        "url-loader": "^0.5.9",
         "webpack": "^3.5.5",
         "webpack-dev-server": "^2.7.1"
     }
