--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
         "file-loader": "^0.11.2",
         "mongoose": "^4.11.7",
         "morgan": "^1.8.2",
-        "node-trello": "^1.2.1",
+        "node-sass": "^4.5.3",
         "nodemon": "^1.11.0",
-        "passport": "^0.4.0",
-        "passport-local": "^1.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-router": "^4.1.2",
         "react-router-dom": "^4.1.2",
+        "request": "^2.81.0",
+        "request-promise-native": "^1.0.4",
         "sass-loader": "^6.0.6",
         "semantic-ui-css": "^2.2.12",
         "semantic-ui-react": "^0.71.4",
