--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-preset-react": "^6.24.1",
         "body-parser": "^1.17.2",
         "css-loader": "^0.28.5",
+        "dotenv": "^4.0.0",
         "eslint": "^4.5.0",
         "eslint-loader": "^1.9.0",
         "express": "^4.15.4",
