--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-react": "^6.24.1",
         "body-parser": "^1.17.2",
+        "cors": "^2.8.4",
         "css-loader": "^0.28.5",
         "dotenv": "^4.0.0",
         "eslint": "^4.5.0",
