--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "author": "Igor Kuzmenko <igor@kuzzmi.com>",
     "license": "MIT",
     "scripts": {
+        "start": "yarn start:server & yarn start:client",
         "start:server": "nodemon server/index.js",
         "start:client": "webpack-dev-server"
     },
     "dependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-react": "^6.24.1",
         "body-parser": "^1.17.2",
         "cors": "^2.8.4",
@@ -27,6 +29,7 @@
         "nodemon": "^1.11.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-layout-components": "^3.0.6",
         "react-router": "^4.1.2",
         "react-router-dom": "^4.1.2",
         "request": "^2.81.0",
