--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "file-loader": "^0.11.2",
         "mongoose": "^4.11.7",
         "morgan": "^1.8.2",
+        "mustache-express": "^1.2.5",
         "node-sass": "^4.5.3",
         "nodemon": "^1.11.0",
         "react": "^15.6.1",
