--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "babel-core": "^6.26.0",
+        "babel-eslint": "^7.2.3",
         "babel-loader": "^7.1.2",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-react": "^6.24.1",
@@ -21,8 +22,11 @@
         "dotenv": "^4.0.0",
         "eslint": "^4.5.0",
         "eslint-loader": "^1.9.0",
+        "eslint-plugin-jest": "^20.0.3",
+        "eslint-plugin-react": "^7.2.1",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
+        "moment": "^2.18.1",
         "mongoose": "^4.11.7",
         "morgan": "^1.8.2",
         "mustache-express": "^1.2.5",
@@ -31,8 +35,10 @@
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-layout-components": "^3.0.6",
+        "react-redux": "^5.0.6",
         "react-router": "^4.1.2",
         "react-router-dom": "^4.1.2",
+        "redux": "^3.7.2",
         "request": "^2.81.0",
         "request-promise-native": "^1.0.4",
         "sass-loader": "^6.0.6",
