--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-react": "^7.2.1",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
+        "json2csv": "^3.11.1",
         "moment": "^2.18.1",
         "mongoose": "^4.11.7",
         "morgan": "^1.8.2",
