--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Igor Kuzmenko <igor@kuzzmi.com>",
     "license": "MIT",
     "scripts": {
-        "start": "yarn start:server & yarn start:client",
+        "start": "run-p start:server start:client",
         "start:server": "nodemon server/index.js",
         "start:client": "webpack-dev-server"
     },
@@ -33,6 +33,7 @@
         "mustache-express": "^1.2.5",
         "node-sass": "^4.5.3",
         "nodemon": "^1.11.0",
+        "npm-run-all": "^4.1.2",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-layout-components": "^3.0.6",
